fix build_config for old trtllm version (#464)
Signed-off-by: etshen <etshen@nvidia.com>

--- a/src/aiconfigurator/generator/config/backend_templates/trtllm/extra_engine_args.1.0.0rc3.yaml.j2
+++ b/src/aiconfigurator/generator/config/backend_templates/trtllm/extra_engine_args.1.0.0rc3.yaml.j2
@@ -20,11 +20,12 @@ enable_chunked_prefill: {{ enable_chunked_prefill | default(false) }}
 
 {% set _max_seq_len = build_config.max_seq_len | default(none) %}
 
-max_batch_size: {{ build_config.max_batch_size }}
-max_num_tokens: {{ build_config.max_num_tokens }}
-{% if _max_seq_len is not none and _max_seq_len != '' %}
-max_seq_len: {{ _max_seq_len }}
-{% endif %}
+build_config:
+  max_batch_size: {{ build_config.max_batch_size }}
+  max_num_tokens: {{ build_config.max_num_tokens }}
+  {% if _max_seq_len is not none and _max_seq_len != '' %}
+  max_seq_len: {{ _max_seq_len }}
+  {% endif %}
 
 kv_cache_config:
   free_gpu_memory_fraction: {{ kv_cache_config.free_gpu_memory_fraction | default(0.80) }}
