fix: use correct artifact-dir for AIC generated aiperf commands (#462)
* store aiperf artifacts at different concurrency levels in different folders to avoid overwriting exisiting results

Signed-off-by: Simone Chen <simonec@nvidia.com>

* store aiperf results in pvc if pvc is specified

Signed-off-by: Simone Chen <simonec@nvidia.com>

---------

Signed-off-by: Simone Chen <simonec@nvidia.com>

--- a/src/aiconfigurator/generator/config/backend_templates/benchmark/bench_run.sh.j2
+++ b/src/aiconfigurator/generator/config/backend_templates/benchmark/bench_run.sh.j2
@@ -23,7 +23,7 @@ ARTIFACT_DIR="${BENCH_ARTIFACT_DIR:-/tmp/bench_artifacts}"
 for concurrency in "${concurrency_array[@]}"; do
   echo "Run concurrency: $concurrency"
   aiperf profile \
-    --artifact-dir "${ARTIFACT_DIR}" \
+    --artifact-dir "${ARTIFACT_DIR}/concurrency_${concurrency}" \
     -m {{ BenchConfig.model }} \
     --endpoint-type {{ BenchConfig.endpoint_type }} \
     -u http://{{ ServiceConfig.head_node_ip }}:{{ ServiceConfig.port }} \
